# Advent_Code

./: pyproject.toml
2020/Day_1/: Day_1.py
2021/Day1/: day1.py
2021/Day2/: day2.py
2021/Day3/: day3.py
2021/Day5/: day5.py
2022/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  utils.py
2023/: day1.py  day2.py  utils.py
