[tool.poetry]
name = "advent-code"
version = "0.1.0"
description = ""
authors = ["James Moro <james.moro.11@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_code"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
jupyter = "^1.0.0"
numpy = "^1.26.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
